<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#2C2624">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_weight="0.62"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:layout_marginLeft="100dp"
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:layout_marginLeft="100dp"
        android:id="@+id/etPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass"/>

    <CheckBox
        android:layout_marginLeft="150dp"
        android:id="@+id/checkBox"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="Recordar" />

    <Button
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="10dp"
        android:onClick="login"
        android:id="@+id/btnLogin"
        android:background="@android:color/holo_green_light"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="120dp"
        android:onClick="connect"
        android:text="@string/connectTEST"
        android:layout_weight="0.04" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.01"
        android:background="@android:color/holo_green_light"
        android:onClick="register"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="25dp"
        android:onClick="restartPass"
        android:text="@string/pass_lost"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="110dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textColor="#FF0000"
        android:textSize="17sp"
        android:text="@string/user_pass_error"
        android:layout_weight="0.02" />


</LinearLayout>